# verify-project

./: README.md
verify-api/: Cargo.toml  Rocket.toml
verify-api/src/: main.rs
verify-api/src/modules/: mod.rs
verify-api/src/modules/api/: mod.rs
verify-api/src/modules/api/middleware/: guard_helper.rs  mod.rs
verify-api/src/modules/api/router/: mod.rs  router_api.rs
verify-api/src/modules/server/: config.rs  server.rs
verify-webapp/: app.config.ts  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
verify-webapp/components/: LoaderApp.vue
verify-webapp/layouts/: m1000.vue
verify-webapp/plugins/: vuex.ts
verify-webapp/server/api/: setup.get.ts
verify-webapp/src/configs/: app.js  setup.ts
verify-webapp/store/: store.ts
verify-webapp/store/modules/: config.ts
